FIxed info popup to take all width and pagination buttons to not overlap with the text on the left

--- a/app/ui/static/css/app.css
+++ b/app/ui/static/css/app.css
@@ -555,11 +555,11 @@ color: #000 !important;
 }
 
 .popover {
-    max-width: 100%;
+    min-width: 400px;
 }
 
 .popover-content {
-    width: 300px !important;
+    width: 100%;
 }
 
 .btn-json {
